2003-12-28  Martin Schaffner <maschaffner@gmx.ch>

	* main/piggy.c: fix bug 1067

	* main/piggy.c: fix bugfix for 1067

	* main/piggy.c: fix 2nd part of bug 1067 (make d2x compatible
	with descent.pig of mac registered)

2003-12-18  Bradley Bell  <btb@icculus.org>

	* main/kconfig.c: fixes for linux-native joystick

	* main/kconfig.c: bunch of fixes (esp. for non linux-native
	joystick)

	* arch/include/joy.h: comments/formatting

2003-12-10  Alexander Y. Yeikovich <demon@mci.net.ua>

	* compilerdefs.txt: added FreeBSD defs

2003-12-08  Bradley Bell <btb@icculus.org>

	* include/dtypes.h, include/dtypes.inc: remove unused, redundant
	files

2003-12-08  Alexander Y. Yeikovich <demon@mci.net.ua>

	* arch/linux/ipx_kali.c, arch/linux/ipx_mcast4.c,
	arch/linux/ipx_udp.c: fix FreeBSD compile errors

2003-12-08  Alexander Y. Yeikovich <demon@mci.net.ua> and Bradley Bell <btb@icculus.org>

	* 2d/ibitblt.c, include/maths.h, include/ogl_init.h,
	include/pstypes.h, main/game.c, main/game.h, unused/bios/ipx.c:
	get rid of silly ulongs

	* configure.ac, 2d/bitblt.c, 2d/linear.asm, maths/fix.asm,
	maths/vecmata.asm, texmap/tmap_inc.asm, texmap/tmap_per.asm,
	texmap/tmappent.S, texmap/tmapppro.S: enable nasm on FreeBSD,
	change relevant __linux__ macros to __ELF__

2003-11-27  Bradley Bell  <btb@icculus.org>

	* include/ogl_init.h: added proto for ogl_check_mode

	* arch/sdl/digi.c, arch/sdl/gr.c, arch/sdl/mouse.c,
	arch/win32/findfile.c, main/inferno.c, main/titles.c: Pocket PC
	fixes

2003-11-26  Bradley Bell  <btb@icculus.org>

	* libmve/decoder16.c, libmve/mve_main.c, main/newmenu.c: fix gcc
	3.3 compiler warnings

	* arch/sdl/gr.c, main/kludge.c: landscape fixes, implemented
	gr_check_mode

	* include/pstypes.h: OS X fixes

	* cfile/cfile.c, include/pstypes.h, main/inferno.c,
	main/newmenu.h: linux fixes

	* configure.ac cygconf VisualC/d2x.dsw VisualC/d2x/d2x.dsp
	VisualC/d2xgl/.cvsignore VisualC/d2xgl/d2xgl.dsp arch/ogl/gr.c