@@ -1,3 +1,7 @@
+2004-01-06  Martin Schaffner <maschaffner@gmx.ch>
+
+        * include/pstypes.h: sun OS typedef fixes
+
 2003-12-28  Martin Schaffner <maschaffner@gmx.ch>
 
 	* main/piggy.c: fix bug 1067
